add listings for chapters 1,2,3

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -14,5 +14,13 @@
     ],
     "suffix": ".bs.js",
     "reason": { "react-jsx": 3 },
-    "bs-dependencies": ["@rescript/react"]
+    "bs-dependencies": ["@rescript/react"],
+    "gentypeconfig": {
+      "language": "typescript",
+      "module": "es6",
+      "debug": {
+        "all": false,
+        "basic": false
+      }
+    }
   }
