--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "devDependencies": {
     "@types/react": "^18.0.9",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "gentype": "^4.3.0",
     "rescript": "^9.1.4",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "@rescript/react": "^0.10.3",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "name": "noveo-rescript-lecture-code",
   "version": "1.0.0",
